2018-08-23  Joseph Pecoraro  <pecoraro@apple.com>

        JSContext Inspector: Scripts not showing up in Resources tab
        https://bugs.webkit.org/show_bug.cgi?id=188814
        <rdar://problem/43576117>

        Reviewed by Brian Burg.

        * UserInterface/Views/ResourceSidebarPanel.js:
        (WI.ResourceSidebarPanel.prototype._addScript):
        This path shouldn't apply to JSContext inspection which will
        never have a pageTarget and but doesn't have a mainResource.

2018-08-22  Devin Rousso  <drousso@apple.com>

        Web Inspector: cannot delete multiple event breakpoints by repeatedly hitting delete
        https://bugs.webkit.org/show_bug.cgi?id=188803
        <rdar://problem/43572838>

        Reviewed by Matt Baker.

        * UserInterface/Views/DebuggerSidebarPanel.js:
        (WI.DebuggerSidebarPanel.prototype._domBreakpointAddedOrRemoved):
        (WI.DebuggerSidebarPanel.prototype._eventBreakpointAddedOrRemoved):

2018-08-22  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Do not include TreeOutlineDataGridSynchronizer.js in inspector main.

        The script was removed in r235151.

        * UserInterface/Main.html:

2018-08-21  Matt Baker  <mattbaker@apple.com>

        Web Inspector: Remove TreeOutlineDataGridSynchronizer
        https://bugs.webkit.org/show_bug.cgi?id=188449
        <rdar://problem/43107980>

        Reviewed by Devin Rousso.

        * UserInterface/Views/HeapAllocationsTimelineView.js:
        (WI.HeapAllocationsTimelineView.prototype.layout):
        * UserInterface/Views/LayoutTimelineView.js:
        (WI.LayoutTimelineView.prototype._processPendingRecords):
        * UserInterface/Views/NetworkTimelineView.js:
        (WI.NetworkTimelineView.prototype._processPendingRecords):
        * UserInterface/Views/RenderingFrameTimelineView.js:
        (WI.RenderingFrameTimelineView.prototype._processPendingRecords):