@@ -1,3 +1,14 @@
+2018-08-23  Devin Rousso  <drousso@apple.com>
+
+        Web Inspector: REGRESSION: InspectorStyleSheet not visible in the resources sidebar
+        https://bugs.webkit.org/show_bug.cgi?id=188819
+        <rdar://problem/43579039>
+
+        Reviewed by Brian Burg.
+
+        * UserInterface/Models/ResourceCollection.js:
+        (WI.ResourceCollection.prototype.objectIsRequiredType):
+
 2018-08-23  Joseph Pecoraro  <pecoraro@apple.com>
 
         JSContext Inspector: Scripts not showing up in Resources tab
